--- a/lolo.html
+++ b/lolo.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/inicio.css">
     <link rel="stylesheet" href="./css/modal.css">
+    <script src="https://cdn.jsdelivr.net/npm/phaser@2.6.2/build/phaser.min.js"></script>
+
 </head>
 <body id="loloHTML" class="bg-gray-900">
     <header class="bg-ge-dark py-4 px-6 flex justify-between items-center border-b-4 border-ge-yellow pixel-border">
