--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/dialogs.css">
   <link rel="stylesheet" href="./css/modal.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" /></head>
-
+  <script src="https://cdn.jsdelivr.net/npm/phaser@2.6.2/build/phaser.min.js"></script>
 </head>
 <body id="landing" class="min-h-screen bg-gray-900">
   <!-- Header/Navigation Responsivo -->
