--- a/register.html
+++ b/register.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/modal.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/phaser@2.6.2/build/phaser.min.js"></script>
+
 </head>
 <body >
     <!-- Register Form -->
