Se logró añadió finalmente un botón en el juego principal para devolverse a lolo.hmtl

--- a/game.html
+++ b/game.html
@@ -24,11 +24,12 @@
                 background-repeat: no-repeat;
                 background-position: center;
                 background-color: #a07f14;
-                z-index: 999;
+                z-index: 700;
                 display: none;
             }
         </style>
 <body id="game">
+        <button id="btn-regresar-perfil">← Volver al perfil <img src="./img/LOLO.png" alt="" srcset=""></button>
         <div id="orientation"></div>
             <!-- Modal Dialog -->
     <div id="modalContainer" class="modal-container fixed inset-0 flex items-center justify-center z-50 opacity-0 transition-opacity duration-300">
