Se logró guardar en firebase el nivel en el que está cada usuario

--- a/lolo.html
+++ b/lolo.html
@@ -51,7 +51,7 @@
                 <div>
                     <h3 class="text-ge-blue font-vt323 text-xl mb-2">ESTADÍSTICAS</h3>
                     <ul class="font-courier text-ge-blue space-y-2">
-                        <li><span class="text-ge-yellow">Nivel alcanzado:</span> 3</li>
+                        <li><span class="text-ge-yellow">Nivel alcanzado:</span> <span id="nivelRanking">0</span></li>
                         <li><span class="text-ge-yellow">Puntuación máxima:</span> 5,240</li>
                         <li><span class="text-ge-yellow">Logros desbloqueados:</span> 2/10</li>
                     </ul>
