Se añadió la tabla de rankings de los usuarios por su nivel

--- a/lolo.html
+++ b/lolo.html
@@ -44,7 +44,7 @@
                         <li><span class="text-ge-yellow">Nombre:</span> <span id="nombreUsuario">-</span></li>
                         <li><span class="text-ge-yellow">Correo:</span> <span id="correoUsuario">-</span></li>
                         <li><span class="text-ge-yellow">Teléfono:</span> <span id="telefonoUsuario">-</span></li>
-                        <li><span class="text-ge-yellow">Miembro desde:</span> <span id="fechaRegistro">-</span></li>
+                        <li><span class="text-ge-yellow">Jugador(a) desde:</span> <span id="fechaRegistro">-</span></li>
                     </ul>
                 </div>
                 
@@ -52,8 +52,7 @@
                     <h3 class="text-ge-blue font-vt323 text-xl mb-2">ESTADÍSTICAS</h3>
                     <ul class="font-courier text-ge-blue space-y-2">
                         <li><span class="text-ge-yellow">Nivel alcanzado:</span> <span id="nivelRanking">0</span></li>
-                        <li><span class="text-ge-yellow">Puntuación máxima:</span> 5,240</li>
-                        <li><span class="text-ge-yellow">Logros desbloqueados:</span> 2/10</li>
+                      
                     </ul>
                 </div>
             </div>
@@ -69,6 +68,22 @@
                     </button>
                 </div>
             </div>
+            <!-- Sección Ranking Global -->
+<div id="rankingSection" class="mt-8 max-w-3xl mx-auto ge-container p-4 rounded-lg bg-ge-black">
+  <h3 class="text-ge-blue font-vt323 text-xl mb-2">🏆 Ranking Global</h3>
+  <table id="rankingTable" class="min-w-full bg-ge-black text-ge-blue border-collapse">
+    <thead>
+      <tr>
+        <th class="px-4 py-2 border border-ge-blue text-left">Usuario</th>
+        <th class="px-4 py-2 border border-ge-blue text-left">Nivel</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Se completará desde JS -->
+    </tbody>
+  </table>
+</div>
+
         </div>
     </main>
         <!-- Modal Dialog -->
